【提交类型】：添加功能 【相关缺陷】： 【详细描述】：引入图标 【影响范围】：不影响 【备　　注】：

--- a/resources/static/sass/app.scss
+++ b/resources/static/sass/app.scss
@@ -1,8 +1,8 @@
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
-
 // Variables
 @import 'variables';
 
 // Bootstrap
 @import '../../../node_modules/bootstrap/scss/bootstrap';
+
+// Fonts
+@import '../../../node_modules/bootstrap-icons/font/bootstrap-icons';
