--- a/resources/static/sass/app.scss
+++ b/resources/static/sass/app.scss
@@ -2,7 +2,7 @@
 @import 'variables';
 
 // Bootstrap
-@import '../../../node_modules/bootstrap/scss/bootstrap';
+@import "/node_modules/bootstrap/scss/bootstrap";
 
 // Fonts
-@import '../../../node_modules/bootstrap-icons/font/bootstrap-icons';
+@import '/node_modules/bootstrap-icons/font/bootstrap-icons';
