【提交类型】：添加功能 【相关缺陷】： 【详细描述】：淘宝改版v2 【影响范围】：不影响 【备　　注】：

--- a/src/yxx-bace/app/index/view/index/index.html
+++ b/src/yxx-bace/app/index/view/index/index.html
@@ -26,5 +26,13 @@
             <p>支持快递类型：韵达，邮政，极兔，百世</p>
         </div>
     </div>
+    <div class="alert alert-warning" role="alert">
+        <p>3.清除商户数据源和快递对账单的操作</p>
+        <div class="pl-3">
+            <p>3.1 删除所有商户数据源</p>
+            <p>3.2 删除所有快递对账单</p>
+            <p><a href="/index/index/delete" class="btn btn-danger btn-sm">清除数据</a></p>
+        </div>
+    </div>
 </div>
 {/block}
