--- a/src/yxx-bace/app/merchant/view/index/index.html
+++ b/src/yxx-bace/app/merchant/view/index/index.html
@@ -5,13 +5,11 @@
     <div class="alert alert-warning" role="alert">
         <p>1.商户数据源的操作</p>
         <div class="pl-3">
-            <p>1.1 <a href="{:url('tianmao/file/list')}">天猫</a>【1文件添加-2导入数据-3合并数据】
+            <p>1.1 <a href="{:url('tianmao/file/list')}">天猫v1</a>【1文件添加-2导入数据-3合并数据】
             </p>
-            <p>1.2 <a href="{:url('taobao/file/list')}">淘宝</a>【1文件添加-2导入数据-3合并数据】
+            <p>1.2 <a href="{:url('tianmaov2/file/list')}">天猫v2</a>【1文件添加-2导入数据】
             </p>
-            <p>1.3 <a href="{:url('pdd/file/list')}">拼多多</a>【1文件添加-2导入数据】
-            </p>
-            <p>1.4 <a href="{:url('wangdiantong/file/list')}">旺店通</a>【1文件添加-2导入数据】
+            <p>1.3 <a href="{:url('wangdiantong/file/list')}">旺店通</a>【1文件添加-2导入数据】
             </p>
         </div>
     </div>
