--- a/src/yxx-accountv1/app/wangdiantong/view/layout/base.html
+++ b/src/yxx-accountv1/app/wangdiantong/view/layout/base.html
@@ -5,6 +5,7 @@
     <title>{block name="title"}标题{/block}</title>
 
     {css href="/static/bootstrap-4.6.0/css/bootstrap.min.css" /}
+    {css href="/static/bootstrap-icons/bootstrap-icons.css" /}
 </head>
 <body>
 {include file="layout/header" /}
@@ -17,6 +18,18 @@
 {js href="/static/jquery-3.5.1/jquery-3.5.1.min.js" /}
 {js href="/static/popper.js@1.16.1/dist/umd/popper.min.js" /}
 {js href="/static/bootstrap-4.6.0/js/bootstrap.min.js" /}
+<script>
+    $(function () {
+        $('.tooltip-right-html').tooltip({
+            placement: 'right',
+            html: true
+        })
+        $('.tooltip-top-html').tooltip({
+            placement: 'right',
+            html: true
+        })
+    })
+</script>
 {block name="ajaxjs"}{/block}
 </body>
 </html>
